# NeuralNetwork

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CustomerData.hpp  Global.hpp  Makefile  Neuron.hpp  README.md  SimpleNN  cmake_install.cmake  main.cpp
src/: CustomerData.hpp  Global.hpp  Makefile  NeuralNetwork.hpp  NeuralNetworkLayer.hpp  Neuron.hpp  cmake_install.cmake  main.cpp
test/: CMakeLists.txt  Makefile  NeuralNetworkLayerTest.hpp  NeuralNetworkTest.hpp  NeuronTest.hpp  cmake_install.cmake  main.cpp
